# readable-or-else

./: .gitignore  AGENTS.md  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: crol-list-rewrites.html  index.html
docs/consumers/: crol-list.md
examples/: README.md  crol-list-rewrites.html
readable_or_else/: __init__.py  apply.py  cli.py  denial_rules.py  extract.py  fix.py  llm.py  measure.py  mixed_content.py  presets.py  report.py
reading_gate/: __init__.py  baseline.py  cli.py  extract.py  gate.py  llm.py  measure.py  presets.py  report.py
tests/: fakes.py  test_apply.py  test_baseline.py  test_cli.py  test_command_backend.py  test_denial_rules.py  test_extract.py  test_fix.py  test_gate.py  test_llm.py  test_measure.py  test_mixed_content.py
