[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "reading-gate"
version = "0.1.0"
description = "Readability CI gate + LLM rewrite component (Flesch-Kincaid & friends, gate/warn/ratchet, LLM-backed simplification suggestions)"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "textstat>=0.7",
    "beautifulsoup4>=4.12",
]

[project.optional-dependencies]
dev = ["pytest>=7"]

[project.scripts]
reading-gate = "reading_gate.cli:main"

[tool.setuptools.packages.find]
include = ["reading_gate*"]
